test/cli/suppress-non-critical/suppress-non-critical.out
-e:2: Parse Error: unexpected token: syntax error http://go/e/2001
     2 |# typed: true
                    ^
Errors: 1
0
